# NJAU-Auth

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/njau_auth/: __init__.py  auth_client.py  auth_manager.py  cli.py  exceptions.py  models.py
src/njau_auth/utils/: __init__.py  crypto.py  parse.py
tests/: test_auth_client.py  test_parse_utils.py
