[project]
name = "njau-auth"
version = "0.1.0"
description = "NJAU CAS authentication helper"
readme = "README.md"
authors = [{ name = "leecyang" }]
license = { text = "MIT" }
keywords = ["njau", "cas", "auth", "httpx"]
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1", "pycryptodome>=3.20.0"]

[project.scripts]
njau-auth-login = "njau_auth.cli:main"

[project.urls]
Homepage = "https://github.com/leecyang/NJAU-Auth"
Repository = "https://github.com/leecyang/NJAU-Auth"
Issues = "https://github.com/leecyang/NJAU-Auth/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/njau_auth"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers"
